--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Video Games</title>
 </head>
 <body>
-    <div>
     <h2>Marvel Rivals</h2>
         <p>Marvel Rivals is a super-hero team based PVP shooter game, derived from the marvel comics universe. It launched in 2024 and became a big hit in the gaming community. Players are given the option to play a variety of fan favorites heroes and villains. The game is fast, fun and shows beautiful graphics.</p>
         <p>You have the option to choose between 3 groups of characters:</p>
@@ -17,14 +16,12 @@
         <li>Strategists (healer)</li>
     </ul>
         <p>Each character has unique abilities that makes them special, and they can form teams that creates even more abilities.</p>
-    </div>
-</html>
+</body>
 <body>
-  
     <h4>Palia</h4>
-    <p>Palia published by Singularity 6, is a free cozy MMO community game set in the vibrant world of Palia.  Players can explore, build their housing plot, and decorate it with crafted and foraged items.   
+        <p>Palia published by Singularity 6, is a free cozy MMO community game set in the vibrant world of Palia.  Players can explore, build their housing plot, and decorate it with crafted and foraged items.   
 
-As the player explores the world they will gain levels in following skills: </p>
+    As the player explores the world they will gain levels in following skills: </p>
  <ul>
         <li>Farming</li>
         <li>Fishing</li>
@@ -38,5 +35,6 @@ As the player explores the world they will gain levels in following skills: </p>
 
 
     </ul>
-    <p>Palia offers both solo and multiplayer game play with many opportunities to team up with other players to resource gather and hunt down magic animals. </p>
+        <p>Palia offers both solo and multiplayer game play with many opportunities to team up with other players to resource gather and hunt down magic animals. </p>
 </body>
+</html>
