--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Video Games</title>
 </head>
 <body>
+<h1>Video Games</h1>
     <h2>Marvel Rivals</h2>
         <p>Marvel Rivals is a super-hero team based PVP shooter game, derived from the marvel comics universe. It launched in 2024 and became a big hit in the gaming community. Players are given the option to play a variety of fan favorites heroes and villains. The game is fast, fun and shows beautiful graphics.</p>
         <p>You have the option to choose between 3 groups of characters:</p>
@@ -18,7 +19,7 @@
         <p>Each character has unique abilities that makes them special, and they can form teams that creates even more abilities.</p>
 </body>
 <body>
-    <h4>Palia</h4>
+    <h3>Palia</h3>
         <p>Palia published by Singularity 6, is a free cozy MMO community game set in the vibrant world of Palia.  Players can explore, build their housing plot, and decorate it with crafted and foraged items.   
 
     As the player explores the world they will gain levels in following skills: </p>
